package connectrpc

import (
	"errors"
	"testing"

	"connectrpc.com/connect"
	pb "github.com/jrb/cuda-learning/proto/gen"
	"github.com/jrb/cuda-learning/webserver/pkg/application"
	"github.com/jrb/cuda-learning/webserver/pkg/domain"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
)

// Test data builders
func makeValidStaticImage() *domain.StaticImage {
	return &domain.StaticImage{
		ID:          "img123",
		DisplayName: "Test Image",
		Path:        "/uploads/test.jpg",
		IsDefault:   false,
	}
}

func TestNewFileHandler(t *testing.T) {
	// Act
	sut := NewFileHandler(
		&application.ListAvailableImagesUseCase{},
		&application.UploadImageUseCase{},
		&application.ListVideosUseCase{},
		&application.UploadVideoUseCase{},
	)

	// Assert
	assert.NotNil(t, sut)
	assert.NotNil(t, sut.listAvailableImagesUseCase)
	assert.NotNil(t, sut.uploadImageUseCase)
	assert.NotNil(t, sut.listAvailableVideosUseCase)
	assert.NotNil(t, sut.uploadVideoUseCase)
}

func TestFileHandler_ListAvailableImages(t *testing.T) {
	tests := []struct {
		name         string
		mockImages   []*domain.StaticImage
		mockError    error
		assertResult func(t *testing.T, response *connect.Response[pb.ListAvailableImagesResponse], err error)
	}{
		{
			name: "Success_ReturnsImages",
			mockImages: []*domain.StaticImage{
				makeValidStaticImage(),
			},
			mockError: nil,
			assertResult: func(t *testing.T, response *connect.Response[pb.ListAvailableImagesResponse], err error) {
				assert.NoError(t, err)
				require.NotNil(t, response)
				require.NotNil(t, response.Msg)
				assert.Len(t, response.Msg.Images, 1)

				img := response.Msg.Images[0]
				assert.Equal(t, "img123", img.Id)
				assert.Equal(t, "Test Image", img.DisplayName)
				assert.Equal(t, "/uploads/test.jpg", img.Path)
				assert.False(t, img.IsDefault)
			},
		},
		{
			name:       "Error_UseCaseFails",
			mockImages: nil,
			mockError:  errors.New("database error"),
			assertResult: func(t *testing.T, response *connect.Response[pb.ListAvailableImagesResponse], err error) {
				assert.Error(t, err)
				assert.Nil(t, response)
				assert.Contains(t, err.Error(), "database error")
			},
		},
		{
			name:       "Success_EmptyList",
			mockImages: []*domain.StaticImage{},
			mockError:  nil,
			assertResult: func(t *testing.T, response *connect.Response[pb.ListAvailableImagesResponse], err error) {
				assert.NoError(t, err)
				require.NotNil(t, response)
				require.NotNil(t, response.Msg)
				assert.Len(t, response.Msg.Images, 0)
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// This test is simplified since we can't easily mock the concrete use cases
			// In a real implementation, we would need to refactor FileHandler to accept interfaces
			t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
		})
	}
}

func TestFileHandler_UploadImage(t *testing.T) {
	tests := []struct {
		name         string
		filename     string
		fileData     []byte
		assertResult func(t *testing.T, response *connect.Response[pb.UploadImageResponse], err error)
	}{
		{
			name:     "Success_UploadsImage",
			filename: "test.jpg",
			fileData: []byte("fake image data"),
			assertResult: func(t *testing.T, response *connect.Response[pb.UploadImageResponse], err error) {
				// This test would verify successful upload
				t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
		})
	}
}

func TestFileHandler_ListAvailableVideos(t *testing.T) {
	tests := []struct {
		name         string
		assertResult func(t *testing.T, response *connect.Response[pb.ListAvailableVideosResponse], err error)
	}{
		{
			name: "Success_ReturnsVideos",
			assertResult: func(t *testing.T, response *connect.Response[pb.ListAvailableVideosResponse], err error) {
				t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
		})
	}
}

func TestFileHandler_UploadVideo(t *testing.T) {
	tests := []struct {
		name         string
		filename     string
		fileData     []byte
		assertResult func(t *testing.T, response *connect.Response[pb.UploadVideoResponse], err error)
	}{
		{
			name:     "Success_UploadsVideo",
			filename: "test.mp4",
			fileData: []byte("fake video data"),
			assertResult: func(t *testing.T, response *connect.Response[pb.UploadVideoResponse], err error) {
				t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			t.Skip("Skipping due to concrete type dependencies - requires refactoring FileHandler to use interfaces")
		})
	}
}
